--- a/poster.tex
+++ b/poster.tex
@@ -114,11 +114,11 @@
 \toprule
 Respondent & $X_1$ & $X_2$ & $X_3$ & $X_{157}$ & $X_{(p-1)}$ & $X_p$\\
 \midrule
-Mihai & 9 & 10 & 1 & 8 & 7 & 5\\
-Anton & 1 & 3 & 4 & 7 & 2 & 8\\
-Leonie & 5 & 3 & 5 & 5 & 6 & 3\\
-Joran & 8 & 1 & 3 & 7 & 8 & 7\\
-Esther & 9 & 4 & 8 & 2 & 8 & 8\\
+Mihai & 10 & 10 & 10 & 9 & 6 & 10\\
+Anton & 4 & 9 & 2 & 7 & 5 & 8\\
+Leonie & 2 & 7 & 7 & 10 & 9 & 10\\
+Joran & 3 & 8 & 9 & 8 & 6 & 3\\
+Esther & 7 & 7 & 5 & 6 & 1 & 6\\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -245,7 +245,7 @@ Esther & 9 & 4 & 8 & 2 & 8 & 8\\
   \begin{column}{.28\textwidth}
     \begin{block}{Project summary and code}
       \begin{center}
-        \includegraphics[width = 15cm]{images/qrcode.png}
+        \includegraphics[width = 15cm]{images/GitHub.png}
         \end{center}
     
       \end{block}
@@ -255,7 +255,7 @@ Esther & 9 & 4 & 8 & 2 & 8 & 8\\
   \begin{column}{.28\textwidth}
     \begin{block}{Play with the Shiny app}
       \begin{center}
-        \includegraphics[width = 15cm]{images/qrcode.png}
+        \includegraphics[width = 15cm]{images/Shiny_app.png}
         \end{center}
   
     \end{block}
@@ -265,7 +265,7 @@ Esther & 9 & 4 & 8 & 2 & 8 & 8\\
   \begin{column}{.28\textwidth}
     \begin{block}{More research like this}
       \begin{center}
-        \includegraphics[width = 15cm]{images/qrcode.png}
+        \includegraphics[width = 15cm]{images/Personal_website.png}
         \end{center}
 
     \end{block}
