--- a/poster.tex
+++ b/poster.tex
@@ -102,23 +102,25 @@
 % Section 1: Data --------------------------------------------------------------
 
 \begin{columns}[T]
-
-\begin{column}{.46\textwidth}
+        
+\begin{column}{.70\textwidth}
 
 % Block 1
-\begin{block}{Large data with missing data}
+\begin{block}{Large data with missing values (-)}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{table}
 \centering
-\begin{tabular}[t]{rcccccc}
+\begin{tabular}[t]{lrccccccccccccc}
 \toprule
-Respondent & $X_1$ & $X_2$ & $X_3$ & $X_{157}$ & $X_{(p-1)}$ & $X_p$\\
+  & $x_1$ & $x_2$ & $x_3$ & $x_4$ & ... & $w_{141}$ & $w_{142}$ & $w_{143}$ & $w_{144}$ & ... & $z_{(p-3)}$ & $z_{(p-2)}$ & $z_{(p-1)}$ & $z_p$\\
 \midrule
-Mihai & 10 & 10 & 10 & 9 & 6 & 10\\
-Anton & 4 & 9 & 2 & 7 & 5 & 8\\
-Leonie & 2 & 7 & 7 & 10 & 9 & 10\\
-Joran & 3 & 8 & 9 & 8 & 6 & 3\\
-Esther & 7 & 7 & 5 & 6 & 1 & 6\\
+Esther & 1 & - & 6 & 2 &  & 4 & 1 & 1 & 2 &  & 5 & 2 & 1 & 2\\
+Anton & - & - & 9 & 5 &  & 8 & 8 & 1 & 10 &  & 4 & 3 & 5 & 9\\
+Leonie & - & 6 & - & 5 &  & 9 & 6 & 1 & 9 &  & 3 & 1 & 3 & 5\\
+Joran & 8 & 1 & 1 & - &  & 2 & 1 & 4 & 6 &  & 9 & 9 & 8 & 3\\
+... &  &  &  &  &  &  &  &  &  &  &  &  &  & \\
+\addlinespace
+Mihai & - & 4 & - & 3 &  & 8 & 3 & 10 & 4 &  & 3 & 7 & 5 & 5\\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -197,7 +199,7 @@ Esther & 7 & 7 & 5 & 6 & 1 & 6\\
 \end{knitrout}
           \caption{
             \label{fig:prb-text} 
-            The percent relative bias for the four PCR-based imputation methods is reported (Y-axis) as a function of the number of components used (X-axis).
+            The percent relative bias (Y-axis) for the four PCR-based imputation methods (grid rows) is reported as a function of the number of components used (X-axis).
             }
         \end{figure}
         
@@ -224,7 +226,7 @@ Esther & 7 & 7 & 5 & 6 & 1 & 6\\
 \end{knitrout}
           \caption{
             \label{fig:prb} 
-            The percent relative bias for the four PCR-based imputation methods is reported (Y-axis) as a function of the number of components used (X-axis).
+            The confidence interval coverage for the four PCR-based imputation methods (grid rows) is reported as a function of the number of components used (X-axis).
             }
         \end{figure}
     
