--- a/poster.Rnw
+++ b/poster.Rnw
@@ -21,8 +21,8 @@
 
 % Research Info
 \author[e.costantini@tilburgunviersity.com]{Edoardo Costantini}
-\title{Multiple imputation with Supervised Principal Component Regression}
-\institute{Tilburg University}
+\title{Solving the `many variables' problem in MICE with supervised principal component regression}
+\institute{Tilburg University, Netherlands}
 % Optional foot image
 % \footimage{\includegraphics[width=4cm]{images/qrcode.png}}
 
@@ -38,11 +38,13 @@
 
 % Intro statement --------------------------------------------------------------
 
-\begin{columns}
+\begin{columns}[c]
   \begin{column}{.46\textwidth}
 
     \begin{block}{In one sentence}
+      \vspace{2.05cm}
       \Large Using \textbf{supervised principal component regression} as a univariate \textbf{imputation} model in \textbf{MICE} is a great way to solve the \textbf{many-variables} imputation problem.
+      \vspace{2.05cm}
       \end{block}
     
   \end{column}  
@@ -60,7 +62,6 @@
   \end{columns}
 
   \bigskip
-  {\usebeamercolor[bg]{headline}\hrulefill}
   \bigskip
 
 % Section 2: Approaches --------------------------------------------------------
@@ -74,9 +75,9 @@
   \begin{itemize}
       \item Remove constants and collinear variables.
       \item Evaluate connection between variables in the data.
-      \item Apply a correlation-thresholding strategy.
-      \item Extra: use total scores for item scales
-      \item Extra: use single measurement in longitudinal data
+      \item Apply a correlation-threshold selection.
+      \item Extra: use total scores for item scales.
+      \item Extra: use single measurement in longitudinal data.
   \end{itemize}
 
 \end{block}
@@ -97,10 +98,10 @@
 \begin{block}{Automatic imputation model specification}
 
   \begin{itemize}
-    \item MICE with Principal component regression
-    \item MICE with Association-threshold Supervised Principal Component regression
-    \item MICE with Principal Covariates regression
-    \item MICE with Partial least square
+    \item MICE with Principal component regression (MI-PCR)
+    \item MICE with Association-threshold supervised principal component regression (MI-SPCR)
+    \item MICE with Principal covariates regression (MI-PCovR)
+    \item MICE with Partial least square (MI-PLSR)
   \end{itemize}
 
 \end{block}
@@ -128,7 +129,7 @@
           @
           \caption{
             \label{fig:prb-text} 
-            The percent relative bias (Y-axis) for the four PCR-based imputation methods (grid rows) is reported as a function of the number of components used (X-axis).
+            The percent relative bias (Y-axis) for the correlation coefficient between $x_1$ and $x_2$, obtained after imputing the missing values with the four PCR-based imputation methods (grid rows), is reported as a function of the number of components used (X-axis).
             }
         \end{figure}
         
@@ -148,7 +149,7 @@
           @
           \caption{
             \label{fig:prb} 
-            The confidence interval coverage for the four PCR-based imputation methods (grid rows) is reported as a function of the number of components used (X-axis).
+            The confidence interval coverage for the correlation coefficient between $x_1$ and $x_2$, obtained after imputing the missing values with the four PCR-based imputation methods (grid rows), is reported as a function of the number of components used (X-axis).
             }
         \end{figure}
     
