--- a/beamerthemeLLT-poster.sty
+++ b/beamerthemeLLT-poster.sty
@@ -43,10 +43,11 @@
     \rule{0pt}{.5em}
   \end{beamercolorbox}
    \begin{beamercolorbox}[wd=\paperwidth]{footline}
-     \vskip1.5ex
+     \vskip1.5ex\centering
      \hspace{1em}\usebeamercolor{author in footline}{\bfseries\large\insertauthor}\par\vskip1ex
      \hspace{1em}{\small\ttfamily\bfseries\insertshortauthor}\par\vskip.8ex
      \hspace{1em}\usebeamercolor{institute in footline}{\color{fg}\small\bfseries\insertinstitute}\vskip1ex
+     \vskip1.5em
    \end{beamercolorbox}
 %
 \ifdefined\footim@ge
