--- a/poster.tex
+++ b/poster.tex
@@ -75,7 +75,7 @@
 % Research Info
 \author[e.costantini@tilburguniversity.edu]{Edoardo Costantini}
 \title{Solving the `many variables' problem in MICE with supervised principal component regression}
-\institute{Tilburg University, Netherlands}
+\institute{Tilburg University, The Netherlands}
 % Optional foot image
 % \footimage{\includegraphics[width=4cm]{images/qrcode.png}}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
